# SimpleFactory

./: .gitignore  README.md  SimpleFactoryDiagram.drawio  Untitled Diagram.drawio  factory.py  main.py  pyproject.toml
tests/: test_factory.py
utils/: simple_factory.py
