[tool.poetry]
name = "repl_python3_SimpleFactory"
version = "0.1.0"
description = "To demonstrate a simple factory design pattern with test "
authors = ["Ming-der Wang <mingderwang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
